# UCLRep

./: README.md
autonomous_system/husky_rtabmap_config/: CMakeLists.txt  package.xml
autonomous_system/husky_rtabmap_config/launch/: handheld_mapping.launch  mapping.rviz  mapping_rviz.launch  move_base_obstacle_avoid_bringup.launch  navigation.launch  obstacle_up.launch  odom_up.launch  setup_mapping_transforms_handheld.launch  trolley_map_navigation.launch
autonomous_system/husky_rtabmap_config/src/: odom_publisher.py  pc_rotater.py
odom_system/husky/husky_control/config/: twist_mux.yaml
odom_system/husky/husky_description/urdf/: husky.urdf.xacro  sensors.xacro
odom_system/husky/husky_navigation/config/: costmap_local.yaml
odom_system/husky/husky_navigation/launch/: move_base.launch
odom_system/husky/husky_teleop/: CMakeLists.txt  package.xml
odom_system/husky/husky_teleop/launch/: keyboard_teleop.launch
odom_system/husky/husky_teleop/scripts/: husky_teleop_key
odom_system/husky_simulator/husky_gazebo/: CMakeLists.txt  package.xml
odom_system/husky_simulator/husky_gazebo/launch/: husky_playpen.launch  spawn_husky.launch
odom_system/husky_simulator/husky_gazebo/media/height/: heights.dem
odom_system/husky_simulator/husky_gazebo/worlds/: mdrs.back (copy).world  mdrs.world
perception_system/rover_vision/: CMakeLists.txt  package.xml
perception_system/rover_vision/launch/: vision.launch  vision_test.launch
perception_system/rover_vision/src/: object_2.cpp  old_tennis_ball.cpp  test_bridge.cpp  test_tennis_ball.cpp  test_tennis_ball_test (copy).cpp  test_tennis_ball_test.cpp  test_tennis_ball_test_zhang.cpp
