<package>
  <name>husky_teleop</name>
  <version>0.0.1</version>
  <description>Provides teleoperation using joysticks or keyboard.</description>
  <maintainer email="1271087623@qq.com">Playfish</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/husky_teleop</url>
  <url type="repository">https://github.com/husky/husky</url>
  <url type="bugtracker">https://github.com/husky/husky/issues</url>
  
  <author email="1271087623@qq.com">Playfish</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>husky_bringup</run_depend>
</package>
